--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ empty.txt
 empty0.md
 empty0.java
 IoT Project/
+2018 Winter Co-operative Education Program/
+2019 Creative Coding School/
+Basis and Practice in Programming/
+Cyber_Tech_Friend Freelancer/
+Mentoring_Arduino Mood Light/
+S_Hero/
