--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,3 @@
-empty0.js
-empty1.js
-empty2.js
-empty3.js
-empty0.html
-empty1.html
-empty2.html
-empty.txt
-empty.py
-empty0.md
-empty0.java
 IoT Project/
 2018 Winter Co-operative Education Program/
 2019 Creative Coding School/
@@ -23,3 +12,11 @@ Vue Cli/
 Encore/
 promise example.js
 rplidar_three/
+empty*.*
+SSAFY/
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.iml
+.idea/workspace.xml
